--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 *.o
 *.obj
 
+#Personnnels
+*.suo
+*.opendb
+*.db
+
 # Precompiled Headers
 *.gch
 *.pch
@@ -77,3 +82,4 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+tutoGitSFML/tutoGitSFML.VC.VC.opendb
