--- a/tutoGitSFML/tutoGitSFML/tutoGitSFML.vcxproj.filters
+++ b/tutoGitSFML/tutoGitSFML/tutoGitSFML.vcxproj.filters
@@ -26,6 +26,12 @@
     <ClInclude Include="..\..\headers\pieces.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\headers\bloc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\headers\carre.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
