Création des .h séparément

--- a/tutoGitSFML/tutoGitSFML/tutoGitSFML.vcxproj.filters
+++ b/tutoGitSFML/tutoGitSFML/tutoGitSFML.vcxproj.filters
@@ -23,13 +23,13 @@
     <ClInclude Include="..\..\headers\saisieSecurisee.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\headers\pieces.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\headers\bloc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\headers\carre.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\headers\salle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
