--- a/tutoGitSFML/tutoGitSFML/tutoGitSFML.vcxproj
+++ b/tutoGitSFML/tutoGitSFML/tutoGitSFML.vcxproj
@@ -75,6 +75,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>C:\Users\O L D\Desktop\1_Etudes\2s\168_C++\Exams\TP3\headers;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -150,7 +151,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\headers\bloc.h" />
     <ClInclude Include="..\..\headers\carre.h" />
-    <ClInclude Include="..\..\headers\pieces.h" />
+    <ClInclude Include="..\..\headers\salle.h" />
     <ClInclude Include="..\..\headers\saisieSecurisee.h" />
   </ItemGroup>
   <ItemGroup>
